--- a/app/src/main/res/layout/item_forecast.xml
+++ b/app/src/main/res/layout/item_forecast.xml
@@ -10,7 +10,7 @@
         android:padding="@dimen/spacing_xlarge">
 
     <ImageView
-            android:id="@+id/icon"
+            android:id="@+id/iconView"
             android:layout_width="48dp"
             android:layout_height="48dp"
             tools:src="@mipmap/ic_launcher"/>
@@ -24,14 +24,14 @@
             android:orientation="vertical">
 
         <TextView
-                android:id="@+id/date"
+                android:id="@+id/dateView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                 tools:text="May 14, 2015"/>
 
         <TextView
-                android:id="@+id/description"
+                android:id="@+id/descriptionView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAppearance="@style/TextAppearance.AppCompat.Caption"
@@ -46,14 +46,14 @@
             android:orientation="vertical">
 
         <TextView
-                android:id="@+id/maxTemperature"
+                android:id="@+id/maxTemperatureView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                 tools:text="30º"/>
 
         <TextView
-                android:id="@+id/minTemperature"
+                android:id="@+id/minTemperatureView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="@style/TextAppearance.AppCompat.Caption"
